--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>title</title>
+    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
     <h1>My Blog</h1>
