--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    <h1>My Blog</h1>
+    <div>
+        <h1>My Blog</h1>
+    </div>
     <div>
     <a href="https://www.w3schools.com/html/">
         <h2>Reprehenderit pariatur id reprehenderit pariatur sunt cillum enim.</h2></a>
